# stalwart-provisioner

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  VERSIONING.md  plan.ndjson.tmpl  pyproject.toml  release-please-config.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/rulesets/: main.json
.github/workflows/: add-to-project.yml  ci.yml  publish-image.yml  release.yml  repository-hygiene.yml
.specify/templates/: spec-template.md
deploy/: deployment.yml  development.env  runtime.env  staging.env
examples/: dev-manifest.json  manifest.valid.json  plan.valid.ndjson
schema/: provisioning-manifest.v2.schema.json  schema.min.json  validate-plan.py
scripts/: apply-ruleset.sh  apply.sh  bootstrap.sh  pack-deploy-bundle.py
specs/001-stalwart-provisioner/: spec.md
specs/001-stalwart-provisioner/checklists/: requirements.md
tests/: test_cli_fixtures.py  test_deploy_bundle.py
tests/fixtures/invalid-manifests/: alias-collision.json  duplicate-local-part.json  missing-password-ref.json  missing-schema-version.json  multiple-password-refs.json  raw-password.json  unresolved-group.json
tests/fixtures/invalid-plans/: invalid-enum.ndjson  malformed-json.ndjson  unknown-field.ndjson  unknown-object.ndjson
