[project]
name = "stalwart-provisioner"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["bin/stalwart-provisioner", "schema/validate-plan.py", "tests"]
